--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
       background: linear-gradient(135deg, rgba(127, 255, 212, 0.18), rgba(110, 181, 255, 0.22));
       border: 1px solid rgba(255, 255, 255, 0.08);
       backdrop-filter: blur(12px);
-      color: #03130e;
+      color: #ffffff;
       font-weight: 700;
       letter-spacing: 0.01em;
       font-size: 13px;
       text-transform: uppercase;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.5), 0 0 12px rgba(127, 255, 212, 0.3);
     }
 
     h1 {
